# npd_plainerflow

./: .gitignore  COMMUNITY.md  MANIFEST.in  README.md  SETUP_COMPLETE.md  code.json  demo_inlaw_dynamic_import.py  pipeline_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_a.env  test_b.env  test_dynaconf_loading.py  test_inlaw_external.py  test_load_config.py
AI_Instructions/: AI_Usage.md  DBConnFinder.md  DBTable.md  FrozenDictionary.md  InLaw.md  InLaw.py  NewConfigLayer.md  SQLoop.md  plainerflow_package_overview.md
docs/: ConfigNoir_README.md  DBTable_README.md  InLaw_README.md
examples/: basic_usage.py  credential_finder_usage.py  dbtable_usage.py  frostdict_usage.py  inlaw_usage.py  sqloopcicle_usage.py  test_credential_finder.py
npd_plainerflow/: __init__.py  confignoir.py  credential_finder.py  enginefetcher.py  frostdict.py  inlaw.py  sqloopcicle.py
plainerflow/: __init__.py  credential_finder.py  dbtable.py  frostdict.py  inlaw.py  sqloopcicle.py
readme_example_data/: customers.csv  orders.csv
scripts/: install_and_test.py
test_inlaw_dir/: test_file1.py  test_file2.py
tests/: test_basic.py  test_confignoir.py  test_credential_finder.py  test_db.py  test_dbtable.py  test_frostdict.py  test_inlaw.py  test_load_config.py  test_sqloopcicle.py
