[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plainerflow"
dynamic = ["version"]
description = "A Python package for plain flow operations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Fred Trotter", email = "fred.trotter@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "sqlalchemy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "twine",
    "wheel",
    "build",
]

[project.urls]
Homepage = "https://github.com/ftrotter/plainerflow"
Repository = "https://github.com/ftrotter/plainerflow"
Issues = "https://github.com/ftrotter/plainerflow/issues"

[tool.setuptools.dynamic]
version = {attr = "plainerflow.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["plainerflow*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
